Change obfuscation button text and update labels

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <label class="checkbox-label"><input type="checkbox" id="chkFlat" checked> 制御フローの平坦化</label>
     </div>
 
-    <button id="btnObfuscate" class="main-btn">🚀 超強力難読化を実行 🚀</button>
+    <button id="btnObfuscate" class="main-btn">世界で1番弱い難読化を実行</button>
     
     <div class="progress-container" id="progressContainer">
         <div class="progress-bar" id="progressBar"></div>
@@ -202,7 +202,7 @@
     <div class="status" id="status" style="color: var(--secondary);">準備完了</div>
 
     <div class="control-group">
-        <label>2. 難読化されたコード (Output)</label>
+        <label>2. 難読化されたコード</label>
         <textarea id="outputCode" readonly placeholder="ここに結果が表示されます。実行するにはコピーしてください。"></textarea>
         <button id="btnCopy" class="copy-btn">クリップボードにコピー</button>
     </div>
