--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <label class="checkbox-label"><input type="checkbox" id="chkXor" checked> XOR暗号化</label>
 <label class="checkbox-label"><input type="checkbox" id="chkShuffle" checked>シャッフル</label>
 <label class="checkbox-label"><input type="checkbox" id="chkFlat" checked> 制御フローの平坦化</label>
+<label class="checkbox-label" style="color:var(--primary);"><input type="checkbox" id="chkAntiDump" checked> アンチダンパー (Anti-Dump)</label>
 </div>
 <button id="btnObfuscate" class="main-btn">世界で1番弱い難読化を実行</button>
 <div class="progress-container" id="progressContainer"><div class="progress-bar" id="progressBar"></div></div>
@@ -55,7 +56,13 @@
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
 </a>
 <script>
-const byId=t=>document.getElementById(t);function updateLayerDisplay(){const t=parseInt(byId("b64Layers").value);byId("layerVal").innerText=t,byId("layerWarning").style.display=t>=30?"block":"none"}function handleFileSelect(t){const e=t.target.files[0];if(!e)return;byId("fileNameDisplay").innerText=`選択中: ${e.name} (${(e.size/1024).toFixed(1)} KB)`;const a=new FileReader;a.onload=t=>{byId("inputCode").value=t.target.result,setStatus("ファイルを読み込みました。","success")},a.onerror=()=>setStatus("ファイルの読み込みに失敗しました。","error"),a.readAsText(e)}function setStatus(t,e){const a=byId("status");a.innerText=t,a.style.color="error"===e?"#ff5252":"process"===e?"#bb86fc":"#4db6ac"}function updateProgress(t){const e=byId("progressBar"),a=byId("progressContainer");a.style.display="block",e.style.width=t+"%"}const sleep=t=>new Promise(e=>setTimeout(e,t));function randomString(t){const e="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_";let a="";for(let r=0;r<t;r++)a+=e.charAt(Math.floor(Math.random()*e.length));return a}function generateVarName(){const t=["I","l","O","_"];let e=t[Math.floor(Math.random()*t.length)];for(let a=0;a<7+Math.floor(5*Math.random());a++)e+=t[Math.floor(Math.random()*t.length)];return e+=randomString(3),e}function stringToByteString(t){let e="";for(let a=0;a<t.length;a++)e+="\\"+t.charCodeAt(a);return`"${e}"`}function bytesToBase64(t){return btoa(Array.from(t,t=>String.fromCodePoint(t)).join(""))}function generateMassiveJunkCode(t){let e="";const a=[()=>`local ${generateVarName()} = ${Math.floor(1e4*Math.random())};
+const byId=t=>document.getElementById(t);function updateLayerDisplay(){const t=parseInt(byId("b64Layers").value);byId("layerVal").innerText=t,byId("layerWarning").style.display=t>=30?"block":"none"}function handleFileSelect(t){const e=t.target.files[0];if(!e)return;byId("fileNameDisplay").innerText=`選択中: ${e.name} (${(e.size/1024).toFixed(1)} KB)`;const a=new FileReader;a.onload=t=>{byId("inputCode").value=t.target.result,setStatus("ファイルを読み込みました。","success")},a.onerror=()=>setStatus("ファイルの読み込みに失敗しました。","error"),a.readAsText(e)}function setStatus(t,e){const a=byId("status");a.innerText=t,a.style.color="error"===e?"#ff5252":"process"===e?"#bb86fc":"#4db6ac"}function updateProgress(t){const e=byId("progressBar"),a=byId("progressContainer");a.style.display="block",e.style.width=t+"%"}const sleep=t=>new Promise(e=>setTimeout(e,t));
+function randomString(t){const e="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_";let a="";for(let r=0;r<t;r++)a+=e.charAt(Math.floor(Math.random()*e.length));return a}
+function generateVarName(){const t=["I","l","O","_"];let e=t[Math.floor(Math.random()*t.length)];for(let a=0;a<7+Math.floor(5*Math.random());a++)e+=t[Math.floor(Math.random()*t.length)];return e+=randomString(3),e}
+function stringToByteString(t){let e="";for(let a=0;a<t.length;a++)e+="\\"+t.charCodeAt(a);return`"${e}"`}
+function strToChar(str){let codes=[];for(let i=0;i<str.length;i++)codes.push(str.charCodeAt(i));return`string.char(${codes.join(',')})`}
+function bytesToBase64(t){return btoa(Array.from(t,t=>String.fromCodePoint(t)).join(""))}
+function generateMassiveJunkCode(t){let e="";const a=[()=>`local ${generateVarName()} = ${Math.floor(1e4*Math.random())};
 `,()=>`local ${generateVarName()} = "${randomString(20)}";
 `,()=>`local ${generateVarName()} = function() return ${Math.random()} end;
 `,()=>`local ${generateVarName()} = {${Array.from({length:5},()=>Math.random()).join(",")}};
@@ -72,7 +79,10 @@ const byId=t=>document.getElementById(t);function updateLayerDisplay(){const t=p
 `,()=>`local ${generateVarName()} = setmetatable({}, {__index = function() return ${Math.random()} end});
 `];for(let r=0;r<t;r++)e+=a[Math.floor(Math.random()*a.length)](),r%20==0&&(e+=`-- ${randomString(40)}
 `),r%50==0&&(e+=`--[[ ${randomString(60)} ]]
-`);return e}function injectJunkIntoCode(t,e){const a=t.split("\n");let r=[];for(let t=0;t<a.length;t++){if(r.push(a[t]),Math.random()>.7&&e>50){const t=Math.floor(3*Math.random())+1;for(let e=0;e<t;e++)r.push(`local ${generateVarName()} = ${Math.floor(1e3*Math.random())};`)}t%10==0&&e>100&&r.push(`-- Xxc Qop: ${randomString(50)}`)}return r.join("\n")}async function startObfuscation(){const t=byId("inputCode").value;if(!t.trim())return void setStatus("エラー: コードが入力されていません。","error");const e=parseInt(byId("b64Layers").value);if(e>30&&t.length>5e3&&!confirm("警告: ファイルサイズが大きいため処理落ちしてしまう可能性があります、続行しますか？"))return;const a=byId("btnObfuscate");a.disabled=!0,updateProgress(0),setStatus("難読化処理を実行中... (時間がかかる場合があります)","process");try{await sleep(50);const e={layers:parseInt(byId("b64Layers").value),junk:parseInt(byId("junkIntensity").value),useXor:byId("chkXor").checked,useShuffle:byId("chkShuffle").checked,useFlat:byId("chkFlat").checked},r=await processHeavyTask(t,e);byId("outputCode").value=r;const n=(r.length/1024).toFixed(2);setStatus(`難読化が完了しました！(${n} KB) コピーして使用してください。`,"success"),updateProgress(100)}catch(t){console.error(t),setStatus("エラーが発生しました: "+t.message,"error")}finally{a.disabled=!1,setTimeout(()=>{byId("progressContainer").style.display="none"},2e3)}}async function processHeavyTask(t,e){let a=t;const r=e.layers+2;let n=0,i=randomString(32),o=randomString(32);if(e.useXor){setStatus("暗号化処理中...","process");const t=new Uint8Array(a.length);for(let e=0;e<a.length;e++)t[e]=a.charCodeAt(e);for(let e=0;e<t.length;e++)t[e]^=i.charCodeAt(e%i.length);for(let e=0;e<t.length;e++)t[e]^=o.charCodeAt(e%o.length);a="";const e=32768;for(let r=0;r<t.length;r+=e)a+=String.fromCharCode.apply(null,t.subarray(r,r+e));await sleep(10)}for(let t=0;t<e.layers;t++){if(n++,updateProgress(n/r*85),setStatus(`暗号化レイヤー適用中 (${t+1}/${e.layers})...`,"process"),t%5==0&&await sleep(20),a.length>1e7&&setStatus(`警告: データサイズが大きくなっています (${(a.length/1024/1024).toFixed(2)} MB)`,"process"),0==t%1)try{a=btoa(a)}catch(t){const e=new Uint8Array(a.length);for(let t=0;t<a.length;t++)e[t]=a.charCodeAt(t);a=bytesToBase64(e)}}setStatus("Luaローダー生成中...","process");const l={lib:generateVarName(),str:generateVarName(),tbl:generateVarName(),func:generateVarName(),vm:generateVarName(),st:generateVarName()},s=`
+`);return e}
+function injectJunkIntoCode(t,e){const a=t.split("\n");let r=[];for(let t=0;t<a.length;t++){if(r.push(a[t]),Math.random()>.7&&e>50){const t=Math.floor(3*Math.random())+1;for(let e=0;e<t;e++)r.push(`local ${generateVarName()} = ${Math.floor(1e3*Math.random())};`)}t%10==0&&e>100&&r.push(`-- ${randomString(50)}`)}return r.join("\n")}
+async function startObfuscation(){const t=byId("inputCode").value;if(!t.trim())return void setStatus("エラー: コードが入力されていません。","error");const e=parseInt(byId("b64Layers").value);if(e>30&&t.length>5e3&&!confirm("警告: ファイルサイズが大きいため処理落ちしてしまう可能性があります、続行しますか？"))return;const a=byId("btnObfuscate");a.disabled=!0,updateProgress(0),setStatus("難読化処理を実行中... (時間がかかる場合があります)","process");try{await sleep(50);const e={layers:parseInt(byId("b64Layers").value),junk:parseInt(byId("junkIntensity").value),useXor:byId("chkXor").checked,useShuffle:byId("chkShuffle").checked,useFlat:byId("chkFlat").checked,useAntiDump:byId("chkAntiDump").checked},r=await processHeavyTask(t,e);byId("outputCode").value=r;const n=(r.length/1024).toFixed(2);setStatus(`難読化が完了しました！(${n} KB) コピーして使用してください。`,"success"),updateProgress(100)}catch(t){console.error(t),setStatus("エラーが発生しました: "+t.message,"error")}finally{a.disabled=!1,setTimeout(()=>{byId("progressContainer").style.display="none"},2e3)}}
+async function processHeavyTask(t,e){let a=t;const r=e.layers+2;let n=0,i=randomString(32),o=randomString(32);if(e.useXor){setStatus("暗号化処理中...","process");const t=new Uint8Array(a.length);for(let e=0;e<a.length;e++)t[e]=a.charCodeAt(e);for(let e=0;e<t.length;e++)t[e]^=i.charCodeAt(e%i.length);for(let e=0;e<t.length;e++)t[e]^=o.charCodeAt(e%o.length);a="";const e=32768;for(let r=0;r<t.length;r+=e)a+=String.fromCharCode.apply(null,t.subarray(r,r+e));await sleep(10)}for(let t=0;t<e.layers;t++){if(n++,updateProgress(n/r*85),setStatus(`暗号化レイヤー適用中 (${t+1}/${e.layers})...`,"process"),t%5==0&&await sleep(20),a.length>1e7&&setStatus(`警告: データサイズが大きくなっています (${(a.length/1024/1024).toFixed(2)} MB)`,"process"),0==t%1)try{a=btoa(a)}catch(t){const e=new Uint8Array(a.length);for(let t=0;t<a.length;t++)e[t]=a.charCodeAt(t);a=bytesToBase64(e)}}setStatus("Luaローダー生成中...","process");const l={lib:generateVarName(),str:generateVarName(),tbl:generateVarName(),func:generateVarName(),vm:generateVarName(),st:generateVarName()},s=`
 local ${l.lib} = (function()
     local b = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/='
     local t = {}
@@ -94,7 +104,29 @@ local ${l.lib} = (function()
         return table.concat(r)
     end
 end)()`;let c=`-- [[ Obfuscated by YAJU - ${e.layers} layers - Junk Level: ${e.junk} ]] --
-`;if(e.junk>0&&(setStatus("ダミーコード生成中...","process"),await sleep(100),c+=generateMassiveJunkCode(Math.floor(e.junk/2))),c+=s+"\n",e.junk>80&&(c+=generateMassiveJunkCode(Math.floor(e.junk/4))),e.useShuffle){const t=[];for(let e=0;e<a.length;e+=500)t.push(a.substring(e,e+500));let r=t.map((t,e)=>({v:t,i:e}));for(let t=r.length-1;t>0;t--){const e=Math.floor(Math.random()*(t+1));[r[t],r[e]]=[r[e],r[t]]}let n="{";r.forEach(t=>n+=`[${t.i+1}]="${t.v}",`),n+="}",c+=`local ${l.tbl} = ${n};
+`;
+if(e.useAntiDump){
+    setStatus("アンチダンパー機能を追加中 (Stealth)...", "process");
+    const adVar1 = generateVarName();
+    const adVar2 = generateVarName();
+    const adVar3 = generateVarName();
+    const antiDumpLua = `
+local function ${adVar1}()
+    local ${adVar2} = getfenv()[${strToChar("getgenv")}];
+    if ${adVar2} then
+        ${adVar2}()[${strToChar("saveinstance")}] = nil;
+        ${adVar2}()[${strToChar("save_instance")}] = nil;
+    end
+    if debug and debug.sethook then
+        pcall(function() debug.sethook(function() while true do end end, "c") end)
+    end
+    local ${adVar3} = "${randomString(20)}";
+end
+pcall(${adVar1})
+`;
+    c += antiDumpLua;
+}
+if(e.junk>0&&(setStatus("ダミーコード生成中...","process"),await sleep(100),c+=generateMassiveJunkCode(Math.floor(e.junk/2))),c+=s+"\n",e.junk>80&&(c+=generateMassiveJunkCode(Math.floor(e.junk/4))),e.useShuffle){const t=[];for(let e=0;e<a.length;e+=500)t.push(a.substring(e,e+500));let r=t.map((t,e)=>({v:t,i:e}));for(let t=r.length-1;t>0;t--){const e=Math.floor(Math.random()*(t+1));[r[t],r[e]]=[r[e],r[t]]}let n="{";r.forEach(t=>n+=`[${t.i+1}]="${t.v}",`),n+="}",c+=`local ${l.tbl} = ${n};
 `,e.junk>100&&(c+=generateMassiveJunkCode(Math.floor(e.junk/5))),c+=`local ${l.str} = ""; for i=1, #${l.tbl} do ${l.str} = ${l.str} .. ${l.tbl}[i] end;
 `}else c+=`local ${l.str} = "${a}";
 `;if(e.junk>150&&(c+=generateMassiveJunkCode(Math.floor(e.junk/3))),e.useFlat){let t=[];for(let a=0;a<e.layers;a++)t.push(`${l.str} = ${l.lib}(${l.str})`);if(e.useXor){const e=generateVarName(),a=`
