--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <label class="checkbox-label"><input type="checkbox" id="chkShuffle" checked>シャッフル</label>
 <label class="checkbox-label"><input type="checkbox" id="chkFlat" checked> 制御フローの平坦化</label>
 <label class="checkbox-label" style="color:var(--primary);"><input type="checkbox" id="chkAntiDump" checked> アンチダンパー (Anti-Dump)</label>
-<label class="checkbox-label" style="color:#4db6ac;font-weight:bold;"><input type="checkbox" id="chkLite"> 🚀 軽量化モード (1.5MB以下に自動調整)</label>
+<label class="checkbox-label" style="color:#4db6ac;font-weight:bold;"><input type="checkbox" id="chkLite">軽量化</label>
 <div id="liteModeInfo" class="lite-mode-info" style="display:none">
 💡 軽量化モード: ファイルサイズを自動的に1.5MB以下に抑えます。層数やダミーコードを動的に調整し、解析困難な強度は維持しながらGitHubなどでの公開に最適化します。
 </div>
